[gd_scene load_steps=4 format=3 uid="uid://3jldx2rx5ry3"]

[ext_resource type="Script" uid="uid://btfjfb8xbmj2k" path="res://src/menus/lobby/lobby.gd" id="1_f463r"]
[ext_resource type="PackedScene" uid="uid://bc6c3bbdt8m4m" path="res://src/levels/lobby/lobby.tscn" id="1_pm53w"]
[ext_resource type="PackedScene" uid="uid://s7xddbi1s8fb" path="res://src/menus/ui/button_single/button_single.tscn" id="2_myvp6"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f463r")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Lobby" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_pm53w")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.171007
anchor_top = 0.82716
anchor_right = 0.824653
anchor_bottom = 0.915123
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 60
metadata/_edit_use_anchors_ = true

[node name="GachaButton" parent="HBoxContainer" instance=ExtResource("2_myvp6")]
layout_mode = 2
label = "Gacha"

[node name="MissionButton" parent="HBoxContainer" instance=ExtResource("2_myvp6")]
layout_mode = 2
label = "Missions"

[node name="GalleryButton" parent="HBoxContainer" instance=ExtResource("2_myvp6")]
layout_mode = 2
label = "Gallery"

[connection signal="pressed" from="HBoxContainer/GachaButton" to="." method="_on_gacha_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MissionButton" to="." method="_on_mission_button_pressed"]
[connection signal="pressed" from="HBoxContainer/GalleryButton" to="." method="_on_gallery_button_pressed"]
